Issue #12164: Document (in docstring) that str.translate accepts None for the first argument.